# hdx-scraper-unhabitat

./: README.md  hatch.toml  pyproject.toml  requirements-test.txt  requirements.txt  ruff.toml  run.py  unhabitat.py
.github/workflows/: publish.yaml  run-python-script.yaml
config/: hdx_dataset_static.yaml  project_configuration.yaml
src/hdx/scraper/unhabitat/: __main__.py  unhabitat.py
src/hdx/scraper/unhabitat/config/: project_configuration.yaml
tests/: conftest.py  test_unhabitat.py
tests/fixtures/: 7476ba9ab3fa45ebb683e253a3688997-data.xlsx  SDG_11-7-1_AFG.csv  SDG_11-7-1_AFG.xlsx  SDG_11_7_1_AFG.csv  SDG_11_7_1_AFG.xlsx  share_of_green_areas_and_green_area_per_capita_in_cities_and_urban_areas_1990_2020_AFG.xlsx
tests/fixtures/input/: share_of_green_areas_and_green_area_per_capita_in_cities_and_urban_areas_1990_2020_AFG.csv
